--- a/styles/main.css
+++ b/styles/main.css
@@ -57,7 +57,6 @@ nav span {
 
 .main-post .picture {
     transform: rotate(-12deg);
-
     width: 120px;
     background-color: rgb(126, 126, 126);
     border-radius: 10px;
@@ -81,23 +80,47 @@ nav span {
     flex-direction: column;
     text-align: center;
     align-items: center;
-    background-color: rgb(51, 51, 51);
+    background-color: rgb(70, 70, 70);
     color: white;
+    padding: 0 2em;
 }
 
-.right .image{
+.right * {
+    margin-bottom: 1em;
+}
+
+.right .image {
+    position: relative;
     width: 180px;
     height: 180px;
     background-color: rgb(39, 39, 39);
     border-radius: 100%;
 }
 
+.right .image-wrapper {
+    position: absolute;
+    width: 180px;
+    height: 180px;
+    transform: translate(0, -50%);
+}
+
 .right #newsletter {
-    background-color: rgb(34, 34, 34);
+    background-color: rgb(56, 56, 56);
     font-size: 2em;
 }
 
 .right #tips {
+    font-size: 2em;
+    background-color: rgb(17, 17, 17);
+}
+
+.right #inbox {
+    background-color: rgb(77, 77, 77);
+    font-size: 1.1em;
+}
+
+.right .input {
+    background-color: rgb(44, 44, 44);
     font-size: 2em;
 }
 
@@ -105,4 +128,3 @@ nav span {
     padding: 5px;
     border-radius: 4px;
 }
-
